v 0.2.3 add ability for printing Books sorted by Date of issue refactor and clean up code